# vader-software-development

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: fable-gate.md  worker.md
.codex/agents/: fable-gate.toml  worker.toml
docs/: adr-001-house-source.md  adr-002-price-source.md  adr-003-no-live-trading.md  batch2_orders.md  batch3_orders.md  batch4_orders.md  batch5_wo8.md  batch6_wo9.md  incident-001-agy-containment.md  scheduling.md
reports/: hypothesis-battery-2026-07-16.md  hypothesis-battery-holdout-2026-07-16.json  hypothesis-battery-train-2025-06-30.json  hypothesis-battery-train-2025-06-30.md
scripts/: delegate.ps1
src/pelositracker/: __init__.py  __main__.py  amounts.py  api.py  backtest.py  clerk.py  cli.py  config.py  db.py  digest.py  fetcher.py  hypotheses.py  models.py  normalizer.py  pipeline.py  prices.py  runner.py  scraper.py  shadow.py  storage.py  watchlists.py
tests/: _path.py  test_amounts.py  test_api.py  test_backtest.py  test_digest.py  test_house_anchor.py  test_hypotheses.py  test_identity.py  test_normalizer.py  test_pipeline.py  test_placeholder.py  test_prices.py  test_runner.py  test_shadow.py  test_ui.py  test_watchlists.py
tests/fixtures/: backtest_fixture.json  house_sample.json  senate_filings_sample.json  senate_sample.json
web/: app.js  index.html  style.css
