[project]
name = "pelositracker"
version = "0.1.0"
description = "Tracker for U.S. Congress member stock trading disclosures"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
